tests/snapshots/ui_snapshots__check_state.snap
---
source: tests/ui_snapshots.rs
expression: terminal.backend()
---
"┌──────────────────────────────────────────────────────────────────────────────┐"
"│                          ◆ 中国象棋 Chinese Chess ◆                          │" Hidden by multi-width symbols: [(30, " "), (32, " "), (34, " "), (36, " ")]
"└──────────────────────────────────────────────────────────────────────────────┘"
"               ┌ 棋盘 Board ───────────────┐                ┌──────────────────┐" Hidden by multi-width symbols: [(18, " "), (20, " ")]
"               │ ┌─┐┬──┬──┬──将─┬──┬──┬──┐ │                │ 信息 Info        │" Hidden by multi-width symbols: [(30, " "), (63, " "), (65, " ")]
"               │ │  │  │  │  │  │  │  │  │ │                │                  │"
"               │ ├──┼──┼──┼──┼──┼──┼──┼──┤ │                │回合:● 黑方       │" Hidden by multi-width symbols: [(62, " "), (64, " "), (69, " "), (71, " ")]
"               │ │  │  │  │  │  │  │  │  │ │                │                  │"
"               │ ├──┼──┼──┼──车─┼──┼──┼──┤ │                │步数: 0           │" Hidden by multi-width symbols: [(30, " "), (62, " "), (64, " ")]
"               │ │  │  │  │  │  │  │  │  │ │                │                  │"
"               │ ├──┼──┼──┼──┼──┼──┼──┼──┤ │                │将军!             │" Hidden by multi-width symbols: [(62, " "), (64, " ")]
"               │ │  │  │  │  │  │  │  │  │ │                │                  │"
"               │ ├──┼──┼──┼──┼──┼──┼──┼──┤ │                │                  │"
"               │ 楚河                  汉界│                │                  │" Hidden by multi-width symbols: [(18, " "), (20, " "), (40, " "), (42, " ")]
"               │ ├──┼──┼──┼──┼──┼──┼──┼──┤ │                │                  │"
"               │ │  │  │  │  │  │  │  │  │ │                │                  │"
"               │ ├──┼──┼──┼──┼──┼──┼──┼──┤ │                │                  │"
"               │ │  │  │  │  │  │  │  │  │ │                │                  │"
"               │ ├──┼──┼──┼──┼──┼──┼──┼──┤ │                │                  │"
"               │                           │                │                  │"
"               └───────────────────────────┘                └──────────────────┘"
"┌──────────────────────────────────────────────────────────────────────────────┐"
"│                                  快捷键 Help                                 │" Hidden by multi-width symbols: [(36, " "), (38, " "), (40, " ")]
"└──────────────────────────────────────────────────────────────────────────────┘"
