tests/snapshots/ui_snapshots__compact_layout.snap
---
source: tests/ui_snapshots.rs
expression: terminal.backend()
---
"┌────────────────────────────┐"
"│ ◆ 中国象棋 Chinese Chess ◆ │" Hidden by multi-width symbols: [(5, " "), (7, " "), (9, " "), (11, " ")]
"└────────────────────────────┘"
"     ┌ 棋盘 Board ──────┐     " Hidden by multi-width symbols: [(8, " "), (10, " ")]
"     │ 车马象士将士象马车     " Hidden by multi-width symbols: [(8, " "), (10, " "), (12, " "), (14, " "), (16, " "), (18, " "), (20, " "), (22, " "), (24, " ")]
"     │ │ │ │ │ │ │ │ │ ││     "
"     │ ├─┼─┼─┼─┼─┼─┼─┼─┤│     "
"     │ │ │ │ │ │ │ │ │ ││     "
"     │ ├─炮┼─┼─┼─┼─┼─炮┤│     " Hidden by multi-width symbols: [(10, " "), (22, " ")]
"     │ │ │ │ │ │ │ │ │ ││     "
"     │ 卒┼─卒┼─卒┼─卒┼─卒     " Hidden by multi-width symbols: [(8, " "), (12, " "), (16, " "), (20, " "), (24, " ")]
"     │ │ │ │ │ │ │ │ │ ││     "
"     │ ├─┼─┼─┼─┼─┼─┼─┼─┤│     "
"     │                  │     "
"     │ ├─┼─┼─┼─┼─┼─┼─┼─┤│     "
"     │ │ │ │ │ │ │ │ │ ││     "
"     │ 兵┼─兵┼─兵┼─兵┼─兵     " Hidden by multi-width symbols: [(8, " "), (12, " "), (16, " "), (20, " "), (24, " ")]
"     │ │ │ │ │ │ │ │ │ ││     "
"     │ ├─炮┼─┼─┼─┼─┼─炮┤│     " Hidden by multi-width symbols: [(10, " "), (22, " ")]
"     │ │ │ │ │ │ │ │ │ ││     "
"     └─├─┼─┼─┼─┼─┼─┼─┼─┤┘     "
"┌────────────────────────────┐"
"│      车 快     Help ─车    │" Hidden by multi-width symbols: [(8, " "), (11, " "), (24, " ")]
"└────────────────────────────┘"
