tests/snapshots/ui_snapshots__full_layout.snap
---
source: tests/ui_snapshots.rs
expression: terminal.backend()
---
"┌──────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│                                    ◆ 中国象棋 Chinese Chess ◆                                    │" Hidden by multi-width symbols: [(40, " "), (42, " "), (44, " "), (46, " ")]
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"                                                                        ┌──────────────────────────┐"
"                                                                        │ 着法记录 History         │" Hidden by multi-width symbols: [(75, " "), (77, " "), (79, " "), (81, " ")]
"                                                                        │                          │"
"                                                                        │  暂无着法                │" Hidden by multi-width symbols: [(76, " "), (78, " "), (80, " "), (82, " ")]
"                                                                        │                          │"
"                                                                        │                          │"
"                 ┌ 棋盘 Board ────────────────────────┐                 │                          │" Hidden by multi-width symbols: [(20, " "), (22, " ")]
"                 │  车┐─马──象──士──将──士──象──马──车│                 │                          │" Hidden by multi-width symbols: [(21, " "), (25, " "), (29, " "), (33, " "), (37, " "), (41, " "), (45, " "), (49, " "), (53, " ")]
"                 │  │   │   │   │   │   │   │   │   │ │                 │                          │"
"                 │  ├───┼───┼───┼───┼───┼───┼───┼───┤ │                 │                          │"
"                 │  │   │   │   │   │   │   │   │   │ │                 │                          │"
"                 │  ├───炮──┼───┼───┼───┼───┼───炮──┤ │                 │                          │" Hidden by multi-width symbols: [(25, " "), (49, " ")]
"                 │  │   │   │   │   │   │   │   │   │ │                 │                          │"
"                 │  卒──┼───卒──┼───卒──┼───卒──┼───卒│                 │                          │" Hidden by multi-width symbols: [(21, " "), (29, " "), (37, " "), (45, " "), (53, " ")]
"                 │  │   │   │   │   │   │   │   │   │ │                 │                          │"
"                 │  ├───┼───┼───┼───┼───┼───┼───┼───┤ │                 │                          │"
"                 │ 楚河                           汉界│                 │                          │" Hidden by multi-width symbols: [(20, " "), (22, " "), (51, " "), (53, " ")]
"                 │  ├───┼───┼───┼───┼───┼───┼───┼───┤ │                 │                          │"
"                 │  │   │   │   │   │   │   │   │   │ │                 │                          │"
"                 │  兵──┼───兵──┼───兵──┼───兵──┼───兵│                 │                          │" Hidden by multi-width symbols: [(21, " "), (29, " "), (37, " "), (45, " "), (53, " ")]
"                 │  │   │   │   │   │   │   │   │   │ │                 │                          │"
"                 │  ├───炮──┼───┼───┼───┼───┼───炮──┤ │                 │                          │" Hidden by multi-width symbols: [(25, " "), (49, " ")]
"                 │  │   │   │   │   │   │   │   │   │ │                 │                          │"
"                 │  ├───┼───┼───┼───┼───┼───┼───┼───┤ │                 │                          │"
"                 │  │   │   │   │   │   │   │   │   │ │                 │                          │"
"                 │  车──马──相──仕──帅──仕──相──马──车│                 │                          │" Hidden by multi-width symbols: [(21, " "), (25, " "), (29, " "), (33, " "), (37, " "), (41, " "), (45, " "), (49, " "), (53, " ")]
"                 │                                    │                 │                          │"
"                 └────────────────────────────────────┘                 │                          │"
"                                                                        │                          │"
"                                                                        │                          │"
"                                                                        │                          │"
"                                                                        │                          │"
"                                                                        │                          │"
"                                                                        └──────────────────────────┘"
"┌──────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│                                            快捷键 Help                                           │" Hidden by multi-width symbols: [(46, " "), (48, " "), (50, " ")]
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
