tests/snapshots/ui_snapshots__initial_position_large_terminal.snap
---
source: tests/ui_snapshots.rs
expression: terminal.backend()
---
"┌──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│                                              ◆ 中国象棋 Chinese Chess ◆                                              │" Hidden by multi-width symbols: [(50, " "), (52, " "), (54, " "), (56, " ")]
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
"                                                                                     ┌─────────────────────────────────┐"
"                                                                                     │ 着法记录 History                │" Hidden by multi-width symbols: [(88, " "), (90, " "), (92, " "), (94, " ")]
"                                                                                     │                                 │"
"                                                                                     │  暂无着法                       │" Hidden by multi-width symbols: [(89, " "), (91, " "), (93, " "), (95, " ")]
"                                                                                     │                                 │"
"                                                                                     │                                 │"
"                       ┌ 棋盘 Board ────────────────────────┐                        │                                 │" Hidden by multi-width symbols: [(26, " "), (28, " ")]
"                       │  车┐─马──象──士──将──士──象──马──车│                        │                                 │" Hidden by multi-width symbols: [(27, " "), (31, " "), (35, " "), (39, " "), (43, " "), (47, " "), (51, " "), (55, " "), (59, " ")]
"                       │  │   │   │   │   │   │   │   │   │ │                        │                                 │"
"                       │  ├───┼───┼───┼───┼───┼───┼───┼───┤ │                        │                                 │"
"                       │  │   │   │   │   │   │   │   │   │ │                        │                                 │"
"                       │  ├───炮──┼───┼───┼───┼───┼───炮──┤ │                        │                                 │" Hidden by multi-width symbols: [(31, " "), (55, " ")]
"                       │  │   │   │   │   │   │   │   │   │ │                        │                                 │"
"                       │  卒──┼───卒──┼───卒──┼───卒──┼───卒│                        │                                 │" Hidden by multi-width symbols: [(27, " "), (35, " "), (43, " "), (51, " "), (59, " ")]
"                       │  │   │   │   │   │   │   │   │   │ │                        │                                 │"
"                       │  ├───┼───┼───┼───┼───┼───┼───┼───┤ │                        │                                 │"
"                       │ 楚河                           汉界│                        │                                 │" Hidden by multi-width symbols: [(26, " "), (28, " "), (57, " "), (59, " ")]
"                       │  ├───┼───┼───┼───┼───┼───┼───┼───┤ │                        │                                 │"
"                       │  │   │   │   │   │   │   │   │   │ │                        │                                 │"
"                       │  兵──┼───兵──┼───兵──┼───兵──┼───兵│                        │                                 │" Hidden by multi-width symbols: [(27, " "), (35, " "), (43, " "), (51, " "), (59, " ")]
"                       │  │   │   │   │   │   │   │   │   │ │                        │                                 │"
"                       │  ├───炮──┼───┼───┼───┼───┼───炮──┤ │                        │                                 │" Hidden by multi-width symbols: [(31, " "), (55, " ")]
"                       │  │   │   │   │   │   │   │   │   │ │                        │                                 │"
"                       │  ├───┼───┼───┼───┼───┼───┼───┼───┤ │                        └─────────────────────────────────┘"
"                       │  │   │   │   │   │   │   │   │   │ │                        ┌─────────────────────────────────┐"
"                       │  车──马──相──仕──帅──仕──相──马──车│                        │ 游戏信息 Info                   │" Hidden by multi-width symbols: [(27, " "), (31, " "), (35, " "), (39, " "), (43, " "), (47, " "), (51, " "), (55, " "), (59, " "), (88, " "), (90, " "), (92, " "), (94, " ")]
"                       │                                    │                        │                                 │"
"                       └────────────────────────────────────┘                        │当前回合:● 红方                  │" Hidden by multi-width symbols: [(87, " "), (89, " "), (91, " "), (93, " "), (98, " "), (100, " ")]
"                                                                                     │                                 │"
"                                                                                     │总步数: 0                        │" Hidden by multi-width symbols: [(87, " "), (89, " "), (91, " ")]
"                                                                                     │                                 │"
"                                                                                     │将军状态:正常                    │" Hidden by multi-width symbols: [(87, " "), (89, " "), (91, " "), (93, " "), (96, " "), (98, " ")]
"                                                                                     │                                 │"
"                                                                                     └─────────────────────────────────┘"
"┌──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│                                                      快捷键 Help                                                     │" Hidden by multi-width symbols: [(56, " "), (58, " "), (60, " ")]
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
