tests/snapshots/ui_snapshots__initial_position_small_terminal.snap
---
source: tests/ui_snapshots.rs
expression: terminal.backend()
---
"┌──────────────────────────────────────┐"
"│      ◆ 中国象棋 Chinese Chess ◆      │" Hidden by multi-width symbols: [(10, " "), (12, " "), (14, " "), (16, " ")]
"└──────────────────────────────────────┘"
"          ┌ 棋盘 Board ──────┐          " Hidden by multi-width symbols: [(13, " "), (15, " ")]
"          │ 车马象士将士象马车          " Hidden by multi-width symbols: [(13, " "), (15, " "), (17, " "), (19, " "), (21, " "), (23, " "), (25, " "), (27, " "), (29, " ")]
"          │ │ │ │ │ │ │ │ │ ││          "
"          │ ├─┼─┼─┼─┼─┼─┼─┼─┤│          "
"          │ │ │ │ │ │ │ │ │ ││          "
"          │ ├─炮┼─┼─┼─┼─┼─炮┤│          " Hidden by multi-width symbols: [(15, " "), (27, " ")]
"          │ │ │ │ │ │ │ │ │ ││          "
"          │ 卒┼─卒┼─卒┼─卒┼─卒          " Hidden by multi-width symbols: [(13, " "), (17, " "), (21, " "), (25, " "), (29, " ")]
"          │ │ │ │ │ │ │ │ │ ││          "
"          │ ├─┼─┼─┼─┼─┼─┼─┼─┤│          "
"          │                  │          "
"          │ ├─┼─┼─┼─┼─┼─┼─┼─┤│          "
"          │ │ │ │ │ │ │ │ │ ││          "
"          │ 兵┼─兵┼─兵┼─兵┼─兵          " Hidden by multi-width symbols: [(13, " "), (17, " "), (21, " "), (25, " "), (29, " ")]
"          │ │ │ │ │ │ │ │ │ ││          "
"          │ ├─炮┼─┼─┼─┼─┼─炮┤│          " Hidden by multi-width symbols: [(15, " "), (27, " ")]
"          │ │ │ │ │ │ │ │ │ ││          "
"          │ ├─┼─┼─┼─┼─┼─┼─┼─┤│          "
"          │                  │          "
"          └──────────────────┘          "
"┌──────────────────────────────────────┐"
"│              快捷键 Help             │" Hidden by multi-width symbols: [(16, " "), (18, " "), (20, " ")]
"└──────────────────────────────────────┘"
