tests/snapshots/ui_snapshots__initial_position_ui.snap
---
source: tests/ui_snapshots.rs
expression: terminal.backend()
---
"┌──────────────────────────────────────────────────────────────────────────────┐"
"│                          ◆ 中国象棋 Chinese Chess ◆                          │" Hidden by multi-width symbols: [(30, " "), (32, " "), (34, " "), (36, " ")]
"└──────────────────────────────────────────────────────────────────────────────┘"
"               ┌ 棋盘 Board ───────────────┐                ┌──────────────────┐" Hidden by multi-width symbols: [(18, " "), (20, " ")]
"               │ 车─马─象─士─将┐士─象─马─车│                │ 信息 Info        │" Hidden by multi-width symbols: [(18, " "), (21, " "), (24, " "), (27, " "), (30, " "), (33, " "), (36, " "), (39, " "), (42, " "), (63, " "), (65, " ")]
"               │ │  │  │  │  │  │  │  │  │ │                │                  │"
"               │ ├──┼──┼──┼──┼──┼──┼──┼──┤ │                │回合:● 红方       │" Hidden by multi-width symbols: [(62, " "), (64, " "), (69, " "), (71, " ")]
"               │ │  │  │  │  │  │  │  │  │ │                │                  │"
"               │ ├──炮─┼──┼──┼──┼──┼──炮─┤ │                │步数: 0           │" Hidden by multi-width symbols: [(21, " "), (39, " "), (62, " "), (64, " ")]
"               │ │  │  │  │  │  │  │  │  │ │                │                  │"
"               │ 卒─┼──卒─┼──卒─┼──卒─┼──卒│                │                  │" Hidden by multi-width symbols: [(18, " "), (24, " "), (30, " "), (36, " "), (42, " ")]
"               │ │  │  │  │  │  │  │  │  │ │                │                  │"
"               │ ├──┼──┼──┼──┼──┼──┼──┼──┤ │                │                  │"
"               │ 楚河                  汉界│                │                  │" Hidden by multi-width symbols: [(18, " "), (20, " "), (40, " "), (42, " ")]
"               │ ├──┼──┼──┼──┼──┼──┼──┼──┤ │                │                  │"
"               │ │  │  │  │  │  │  │  │  │ │                │                  │"
"               │ 兵─┼──兵─┼──兵─┼──兵─┼──兵│                │                  │" Hidden by multi-width symbols: [(18, " "), (24, " "), (30, " "), (36, " "), (42, " ")]
"               │ │  │  │  │  │  │  │  │  │ │                │                  │"
"               │ ├──炮─┼──┼──┼──┼──┼──炮─┤ │                │                  │" Hidden by multi-width symbols: [(21, " "), (39, " ")]
"               │ │  │  │  │  │  │  │  │  │ │                │                  │"
"               └─├──┼──┼──┼──┼──┼──┼──┼──┤─┘                └──────────────────┘"
"┌──────────────────────────────────────────────────────────────────────────────┐"
"│                车─马─相─仕─帅─仕 快捷   Help                                 │" Hidden by multi-width symbols: [(18, " "), (21, " "), (24, " "), (27, " "), (30, " "), (33, " "), (36, " "), (38, " ")]
"└──────────────────────────────────────────────────────────────────────────────┘"
