tests/snapshots/ui_snapshots__standard_layout.snap
---
source: tests/ui_snapshots.rs
expression: terminal.backend()
---
"┌──────────────────────────────────────────────────────────┐"
"│                ◆ 中国象棋 Chinese Chess ◆                │" Hidden by multi-width symbols: [(20, " "), (22, " "), (24, " "), (26, " ")]
"└──────────────────────────────────────────────────────────┘"
"                                        ┌──────────────────┐"
"          ┌ 棋盘 Board ──────┐          │ 信息 Info        │" Hidden by multi-width symbols: [(13, " "), (15, " "), (43, " "), (45, " ")]
"          │ 车马象士将士象马车          │                  │" Hidden by multi-width symbols: [(13, " "), (15, " "), (17, " "), (19, " "), (21, " "), (23, " "), (25, " "), (27, " "), (29, " ")]
"          │ │ │ │ │ │ │ │ │ ││          │回合:● 红方       │" Hidden by multi-width symbols: [(42, " "), (44, " "), (49, " "), (51, " ")]
"          │ ├─┼─┼─┼─┼─┼─┼─┼─┤│          │                  │"
"          │ │ │ │ │ │ │ │ │ ││          │步数: 0           │" Hidden by multi-width symbols: [(42, " "), (44, " ")]
"          │ ├─炮┼─┼─┼─┼─┼─炮┤│          │                  │" Hidden by multi-width symbols: [(15, " "), (27, " ")]
"          │ │ │ │ │ │ │ │ │ ││          │                  │"
"          │ 卒┼─卒┼─卒┼─卒┼─卒          │                  │" Hidden by multi-width symbols: [(13, " "), (17, " "), (21, " "), (25, " "), (29, " ")]
"          │ │ │ │ │ │ │ │ │ ││          │                  │"
"          │ ├─┼─┼─┼─┼─┼─┼─┼─┤│          │                  │"
"          │ 楚河         汉界│          │                  │" Hidden by multi-width symbols: [(13, " "), (15, " "), (26, " "), (28, " ")]
"          │ ├─┼─┼─┼─┼─┼─┼─┼─┤│          │                  │"
"          │ │ │ │ │ │ │ │ │ ││          │                  │"
"          │ 兵┼─兵┼─兵┼─兵┼─兵          │                  │" Hidden by multi-width symbols: [(13, " "), (17, " "), (21, " "), (25, " "), (29, " ")]
"          │ │ │ │ │ │ │ │ │ ││          │                  │"
"          │ ├─炮┼─┼─┼─┼─┼─炮┤│          │                  │" Hidden by multi-width symbols: [(15, " "), (27, " ")]
"          │ │ │ │ │ │ │ │ │ ││          │                  │"
"          │ ├─┼─┼─┼─┼─┼─┼─┼─┤│          │                  │"
"          │ │ │ │ │ │ │ │ │ ││          │                  │"
"          │ 车马相仕帅仕相马车          │                  │" Hidden by multi-width symbols: [(13, " "), (15, " "), (17, " "), (19, " "), (21, " "), (23, " "), (25, " "), (27, " "), (29, " ")]
"          │                  │          │                  │"
"          └──────────────────┘          │                  │"
"                                        └──────────────────┘"
"┌──────────────────────────────────────────────────────────┐"
"│                        快捷键 Help                       │" Hidden by multi-width symbols: [(26, " "), (28, " "), (30, " ")]
"└──────────────────────────────────────────────────────────┘"
